--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -1382,7 +1382,7 @@
 "post.privacy.header.contacts" = "کسانی که این پست را میبینند";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "به اشتراک گذاشتن فقط با یک گروه";
 
 /* Controller title for changing destination and privacy
