--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -1220,7 +1220,7 @@
 "post.privacy.header.contacts" = "Kto zobaczy ten post";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Udostępnij tylko grupie";
 
 /* Controller title for changing destination and privacy
