--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -1310,7 +1310,7 @@
 "post.privacy.header.contacts" = "Bu gönderiyi kimler görecek";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Yalnızca bir grupla paylaş";
 
 /* Controller title for changing destination and privacy
