--- a/Halloapp/fr.lproj/Localizable.strings
+++ b/Halloapp/fr.lproj/Localizable.strings
@@ -1220,7 +1220,7 @@
 "post.privacy.header.contacts" = "Qui verra cette publication";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Partager seulement avec un groupe";
 
 /* Controller title for changing destination and privacy
