--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -1042,6 +1042,9 @@
 /* Title of the menu to choose map type. */
 "locationSharing.chooseMap" = "Kies Kaart";
 
+/* Addresses displayed as subtitles in location list. Parameters are non-empty street address and city. */
+"locationSharing.detailedAddress" = "%1$@, %2$@";
+
 /* Subtitle of the user location callout. Parameter is the formatted length measurement of accuracy (including unit). */
 "locationSharing.locationAccuracyDescription" = "Nauwkeurig tot %@";
 
@@ -1056,6 +1059,9 @@
 
 /* Title of the location sharing main screen. */
 "locationSharing.navTitle" = "Locatie";
+
+/* Initial title of the callout bubble for locations selected by long pressing on the map. */
+"locationSharing.selectedLocation" = "Geselecteerde Locatie";
 
 /* Title of a location in location list if it does not have a name. */
 "locationSharing.untitledLocation" = "Naamloze Locatie";
@@ -1280,16 +1286,16 @@
 "notification.one.video" = "📹 video";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.1" = "%@ heeft een nieuw moment gedeeld en die van jou ontgrendeld";
+"notification.unlocked.moment.1" = "%@ heeft een nieuw moment gedeeld om die van jou te ontgrendelen";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.2" = "%1$@ en %2$@ hebben een nieuw moment gedeeld en die van jou ontgrendeld";
+"notification.unlocked.moment.2" = "%1$@ en %2$@ hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.3" = "%1$@, %2$@ en %3$@ hebben een nieuw moment gedeeld en die van jou ontgrendeld";
+"notification.unlocked.moment.3" = "%1$@, %2$@ en %3$@ hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.4" = "%1$@, %2$@, %3$@ en anderen hebben een nieuw moment gedeeld en die van jou ontgrendeld";
+"notification.unlocked.moment.4" = "%1$@, %2$@, %3$@ en anderen hebben een nieuw moment gedeeld om die van jou te ontgrendelen";
 
 /* Missed video call notification text to be shown to the user. */
 "notification.videocall.missed" = "📹 Gemiste video-oproep";
@@ -1381,8 +1387,11 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Wie kan deze post zien";
 
+/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+"post.privacy.header.feeds" = "Feeds";
+
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Jouw Groepen";
 
 /* Controller title for changing destination and privacy
@@ -1724,6 +1733,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Sluit je aan bij mijn netwerk voor échte relaties op HalloApp. Download gratis op halloapp.com/dl";
+
+/* Show more groups in the share group selection */
+"share.destination.more" = "Laat meer zien...";
 
 /* Prompt for the user to share a moment. */
 "share.moment.prompt" = "Deel een moment";
