--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -1382,7 +1382,7 @@
 "post.privacy.header.contacts" = "Quem verá esta postagem";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Seus grupos";
 
 /* Controller title for changing destination and privacy
