--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -1382,7 +1382,7 @@
 "post.privacy.header.contacts" = "Кто увидит этот пост";
 
 /* Header when selecting a group to share with
-   Header when selecting groups to share with */
+   Header when selecting destinations to forward a message, this header appears above the groups section */
 "post.privacy.header.groups" = "Поделиться только с группой";
 
 /* Controller title for changing destination and privacy
