--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -1042,6 +1042,9 @@
 /* Title of the menu to choose map type. */
 "locationSharing.chooseMap" = "اختيار الخريطة";
 
+/* Addresses displayed as subtitles in location list. Parameters are non-empty street address and city. */
+"locationSharing.detailedAddress" = "%1$@، %2$@";
+
 /* Subtitle of the user location callout. Parameter is the formatted length measurement of accuracy (including unit). */
 "locationSharing.locationAccuracyDescription" = "دقيق بنسبة %@";
 
@@ -1056,6 +1059,9 @@
 
 /* Title of the location sharing main screen. */
 "locationSharing.navTitle" = "الموقع";
+
+/* Initial title of the callout bubble for locations selected by long pressing on the map. */
+"locationSharing.selectedLocation" = "الموقع المحدد";
 
 /* Title of a location in location list if it does not have a name. */
 "locationSharing.untitledLocation" = "موقع بلا عنوان";
@@ -1161,6 +1167,9 @@
 
 /* For indicating that a post has been successfully uploaded and shared. */
 "moment.uploading.success" = "تمت المشاركة!";
+
+/* Text shown on the moments stack to indicate that the stack is interactive. Only shown the first time. */
+"moments.swipe.for.more" = "التمرير لعرض المزيد";
 
 /* Message displayed to say when moments will disappear. */
 "mymoment.disappear.time.label" = "تمت مشاركة لحظاتك مع قائمة جهات اتصالك. تظهر اللحظات لمدة 24 ساعة ويمكن عرضها مرة واحدة فقط.";
@@ -1377,6 +1386,9 @@
 
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "لمن سيظهر المنشور";
+
+/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+"post.privacy.header.feeds" = "صفحات الموجز";
 
 /* Header when selecting a group to share with
    Header when selecting destinations to forward a message, this header appears above the groups section */
@@ -1721,6 +1733,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "انضم إلى شبكة العلاقات الفعلية الخاصة بي على هالوآب. قم بتنزيل التطبيق مجانًا من halloapp.com/dl";
+
+/* Show more groups in the share group selection */
+"share.destination.more" = "عرض المزيد...";
 
 /* Prompt for the user to share a moment. */
 "share.moment.prompt" = "مشاركة إحدى اللحظات";
