--- a/Halloapp/cs.lproj/Localizable.strings
+++ b/Halloapp/cs.lproj/Localizable.strings
@@ -1644,7 +1644,8 @@
 /* Row in Settings screen */
 "title.storage" = "Úložiště";
 
-/* Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who reacted to your post.
+   Title for the screen with information about who saw your post. */
 "title.your.post" = "Viděno";
 
 /* Indicates which switch a user needs to turn on to enable contacts permissions. */
