--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -1388,7 +1388,7 @@
 "post.privacy.header.contacts" = "Wer wird diesen Beitrag sehen";
 
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
-"post.privacy.header.feeds" = "Feeds";
+"post.privacy.header.feeds" = "Feed";
 
 /* Header when selecting a group to share with
    Header when selecting destinations to forward a message, this header appears above the groups section */
@@ -1851,7 +1851,8 @@
 /* Row in Settings screen */
 "title.storage" = "Speicher";
 
-/* Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who reacted to your post.
+   Title for the screen with information about who saw your post. */
 "title.your.post" = "Gesehen von";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
