--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -1851,7 +1851,8 @@
 /* Row in Settings screen */
 "title.storage" = "Место хранения";
 
-/* Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who reacted to your post.
+   Title for the screen with information about who saw your post. */
 "title.your.post" = "Видели:";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
