--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -1764,7 +1764,8 @@
 /* Row in Settings screen */
 "title.storage" = "Depolama";
 
-/* Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who reacted to your post.
+   Title for the screen with information about who saw your post. */
 "title.your.post" = "... tarafından görüldü";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
