--- a/Notification Service Extension/nl.lproj/Localizable.strings
+++ b/Notification Service Extension/nl.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Bijwerken";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 Uur";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 Dagen";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Nooit";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Om audio op te nemen, tik op Instellingen en zet Microfoon aan";
 
@@ -135,6 +144,9 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ heeft je uitnodiging voor HalloApp geaccepteerd 🎉";
+
+/* Push notification for a reaction to message */
+"notification.message.reaction" = "Reageerde met %@ op een bericht";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Nieuw moment";
